# NodeGWAS

./: Cargo.toml  LICENSE  README.md
downstream_analysis/: create_chain.md  useful_command.md
downstream_analysis/line_vcf/: README.md  build_pangenome.md
downstream_analysis/mc/: README.md  build_pangenome.md
genotyping/: README.md
genotyping/time/: merge_ploid.sh
kgwas/: Cargo.toml
kgwas/src/: main.rs  merge.rs  tobed.rs
kgwas/test/: YCE04-55.nodes  YCE06-140.nodes  Yacheng-94-49.nodes  merge.txt  paths
notebooks/: gen_man.ipynb  prepare.md
scripts/: merge_ps.sh  merge_vcf.py  node_position.py  run_merge_ps.sh  run_merge_vcf.sh
src/: _tovcf.rs  count.rs  extract.rs  filter.rs  gam.rs  lib.rs  liftover.rs  main.rs  merge.rs  resource.rs  rliftover.rs  rmerge.rs  tobed.rs
sugarcane/: READMI
