[package]
name = "nodegwas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }

log = "0.4"
env_logger = "0.10.0"
chrono = "0.4.24"
termcolor = "1.2"
bed-reader = "0.2.34"
ndarray = "0.15.6"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"